Don't use emacs mode for insert for now since there are some issues
- Block visual insert doesn't work
- "C-[" key combination for escape doesn't work

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -565,9 +565,9 @@ It's commented out right now because it looks terrible.
 
     ;; Make insert mode just like regular emacs
 
-    (define-key evil-emacs-state-map [escape] 'evil-normal-state)
-    (defalias 'evil-insert-state 'evil-emacs-state)
-    (setq evil-emacs-state-cursor '((bar . 2) "white"))
+    ;; (define-key evil-emacs-state-map [escape] 'evil-normal-state)
+    ;; (defalias 'evil-insert-state 'evil-emacs-state)
+    ;; (setq evil-emacs-state-cursor '((bar . 2) "white"))
 
 
     (setq evil-move-cursor-back nil)
