--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -109,7 +109,6 @@ Brought to you by Paradox:
 #+BEGIN_SRC emacs-lisp
 (add-to-list 'default-frame-alist '(fullscreen . maximized))
 #+END_SRC
-
 * General Configuration
 
 Let's configure the editor to our liking.
@@ -220,12 +219,12 @@ Visually wraps lines according to the value of ~fill-column~. Unlike ~fill-colum
 
 #+BEGIN_SRC emacs-lisp 
 
-  (use-package visual-fill-column
-    :ensure t
-    :diminish visual-line-mode
-    :config
-    (add-hook 'text-mode-hook 'visual-fill-column-mode)
-    (global-visual-line-mode))
+  ;; (use-package visual-fill-column
+  ;;   :ensure t
+  ;;   :diminish visual-line-mode
+  ;;   :config
+  ;;   (add-hook 'text-mode-hook 'visual-fill-column-mode)
+  ;;   (global-visual-line-mode))
 
 #+END_SRC
 
@@ -263,17 +262,19 @@ This sets up emacs to inherit commands from ~$PATH~. Without it, some commands t
 
 #+BEGIN_SRC emacs-lisp 
 
-  (use-package exec-path-from-shell
-    :ensure t
-    :config
-    (exec-path-from-shell-initialize))
+    (use-package exec-path-from-shell
+      :ensure t
+      :config
+      (exec-path-from-shell-initialize)
+      (exec-path-from-shell-copy-env "SSH_AGENT_PID")
+      (exec-path-from-shell-copy-env "SSH_AUTH_SOCK"))
 
-  ;; (defun set-exec-path-from-shell-PATH ()
-  ;;   (let ((path-from-shell (shell-command-to-string "env TERM=vt100 /bin/zsh -i -c 'echo $PATH'")))
-  ;;     (setenv "PATH" path-from-shell)
-  ;;     (setq exec-path (split-string path-from-shell path-separator))))
+    ;; (defun set-exec-path-from-shell-PATH ()
+    ;;   (let ((path-from-shell (shell-command-to-string "env TERM=vt100 /bin/zsh -i -c 'echo $PATH'")))
+    ;;     (setenv "PATH" path-from-shell)
+    ;;     (setq exec-path (split-string path-from-shell path-separator))))
 
-  ;; (when window-system (set-exec-path-from-shell-PATH))
+    ;; (when window-system (set-exec-path-from-shell-PATH))
 
 #+END_SRC
 
@@ -1610,7 +1611,6 @@ I often link to JIRA issues in my tasks. This function lets me add link JIRA iss
 
 #+RESULTS:
 : my/configure-org-protocol
-
 ** Installation
 #+BEGIN_SRC emacs-lisp 
 
